--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Quiz App</title>
+  <title>UiQuiz</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
   <link href="app.css" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header><img src="images\programming.png"><h1>Web Development Challenge</h1><img src="images\programming.png"></header>
+  <header><img src="images\programming.png"><h1>UiPath UiPRA Quiz</h1><img src="images\programming.png"></header>
   <main aria-live='polite'>
   </main>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
@@ -21,4 +21,3 @@
 </body>
 
 </html>
-
