--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <h1>UiPath UiPRA Quiz</h1>
   </header>
-  <main aria-live='polite'>
+  <main aria-live='polite' class="position-absolute top-50 start-50 translate-middle">
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
   <script src="app.js"></script>
