adjust header color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="sticky-top mt-2">
-    <h1>UiPath UiPRA Quiz</h1>
+    <h1 class="text-light bg-secondary text-opacity-25">UiPath UiPRA Quiz</h1>
   </header>
   <main aria-live="polite">
   </main>
