--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <header class="sticky-top mt-2">
+  <header class="mt-2">
     <h1 class="text-light bg-secondary text-opacity-25">UiPath UiPRA Quiz</h1>
   </header>
-  <main aria-live="polite">
+  <main>
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
   <script src="app.js"></script>
